--- a/clinical.html
+++ b/clinical.html
@@ -132,7 +132,7 @@
       <!--Grid column-->
       <!--Grid column-->
       <div class="col-md-4 mb-4">
-        <img class="img-fluid my-5" alt="100x100" src="img/Service/subjectselection.png" data-holder-rendered="true">
+        <img class="img-fluid my-5" alt="100x100" src="img/Service/Subjectselection.png" data-holder-rendered="true">
       </div>
     <!--Grid column-->
     </div>
@@ -176,7 +176,7 @@
       <!--Grid column-->
       <!--Grid column-->
       <div class="col-md-4 mb-4">
-        <img class="img-fluid my-5" alt="100x100" src="img/Service/pharmacy.png" data-holder-rendered="true">
+        <img class="img-fluid my-5" alt="100x100" src="img/Service/Pharmacy.png" data-holder-rendered="true">
       </div>
     <!--Grid column-->
     </div>
