--- a/aboutus.html
+++ b/aboutus.html
@@ -98,7 +98,7 @@
       </div>
       <div class="col-md-6">
         <div class="card-body">
-         <img src="img/AboutUs/card-1.png" class="img-fluid rounded-start" alt="Card-1">
+         <img src="img/AboutUs/Card-1.png" class="img-fluid rounded-start" alt="Card-1">
        </div>
      </div>
    </div>
@@ -112,7 +112,7 @@
   <div class="card shadow m-5" style="max-width: 1920px;">
     <div class="row g-0">
       <div class="col-md-6">
-        <img src="img/AboutUs/card-2.png" class="img-fluid rounded-start" alt="Card-1">
+        <img src="img/AboutUs/Card-2.png" class="img-fluid rounded-start" alt="Card-1">
       </div>
       <div class="col-md-6">
         <div class="card-body">
@@ -135,7 +135,7 @@
       </div>
       <div class="col-md-6">
         <div class="card-body">
-         <img src="img/AboutUs/card-3.png" class="img-fluid rounded-start" alt="Card-1">
+         <img src="img/AboutUs/Card-3.png" class="img-fluid rounded-start" alt="Card-1">
        </div>
      </div>
    </div>
