--- a/index.html
+++ b/index.html
@@ -153,15 +153,15 @@
           <div class="carousel-inner">
             <div class="carousel-item testi-item active" data-color="#fb9c9a" data-img="img/1.png">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nobis ratione, harum doloremque aspernatur aliquid quaerat dolores voluptates recusandae qui repellat illum, amet ipsa debitis fugiat commodi nemo suscipit ad!</p>
-              <h3 class="font-weight-bold">David Allison - <span>Doctor</span></h3>
+              <h6 class="font-weight-bold">David Allison - <span>Doctor</span></h6>
             </div>
             <div class="carousel-item testi-item" data-color="#fbd39a" data-img="img/2.png">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nobis ratione, harum doloremque aspernatur aliquid quaerat dolores voluptates recusandae qui repellat illum, amet ipsa debitis fugiat commodi nemo suscipit ad!</p>
-              <h3 class="font-weight-bold">jon can - <span>Volunteer</span></h3>
+              <h6 class="font-weight-bold">Jon can - <span>Volunteer</span></h6>
             </div>
             <div class="carousel-item testi-item" data-color="#9ab0fb" data-img="img/3.png">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nobis ratione, harum doloremque aspernatur aliquid quaerat dolores voluptates recusandae qui repellat illum, amet ipsa debitis fugiat commodi nemo suscipit ad!</p>
-              <h3 class="font-weight-bold">Kevin Gajjar - <span>Volunteer</span></h3>
+              <h6 class="font-weight-bold">Kevin Gajjar - <span>Volunteer</span></h6>
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
@@ -230,7 +230,7 @@
 
     <!-- Form submit button -->
     <div class="text-center">
-      <button class="btn btn-primary btn-lg" type="submit">Submit</button>
+      <button class="btn btn-success btn-lg" type="submit">Send Message</button>
    </div>
 
   </form>
