--- a/scientificaffairs.html
+++ b/scientificaffairs.html
@@ -130,7 +130,7 @@
       <!--Grid column-->
       <!--Grid column-->
       <div class="col-md-4 mb-4">
-        <img class="img-fluid my-5" alt="100x100" src="img/scientific Affairs/medicalwriting.png" data-holder-rendered="true">
+        <img class="img-fluid my-5" alt="100x100" src="img/scientific Affairs/Medicalwriting.png" data-holder-rendered="true">
       </div>
       <!--Grid column-->
     </div>
@@ -145,7 +145,7 @@
     <!--Grid column-->
      <!--Grid column-->
       <div class="col-md-4 mb-4">
-        <img class="img-fluid my-5" alt="100x100" src="img/scientific Affairs/clinicalpharmacology.png" data-holder-rendered="true">
+        <img class="img-fluid my-5" alt="100x100" src="img/scientific Affairs/Clinicalpharmacology.png" data-holder-rendered="true">
       </div>
     <div class="col-md-8 mb-4 my-5">
       <h2 class="text-start"> Clinical Pharmacology </h2>
