--- a/volunteer.html
+++ b/volunteer.html
@@ -124,7 +124,6 @@
   </div>
 </div>
 
-
 <!-- Card -2 -->
 
 <div class="container px-5">
@@ -153,6 +152,60 @@
    </div>
   </div>
 </div>
+
+<!-- FAQ section -->
+
+<div class="py-5"> 
+ <div class="row justify-content-center bg-green align-items-center">
+    <div class="col-md-6 px-5 text-center">      
+      <span class="d-block mt-3"><h3 class="text-white"> What to Expect : Frequently Asked Questions  </h3></span> 
+      <a class="btn btn-secondary m-3" href="readmore.html" >Read more</a>
+        
+    </div>
+  </div>
+</div>
+
+
+<!-- Testimonials -->
+<div class="container">
+  <section class="testimonial-section p-5 align-items-center">
+
+    <div class="row align-items-center">
+      <div class="col-md-6 testi-img">
+        <div class="img-box">
+          <div class="circle"></div>
+          <div class="img-box-inner">
+            <img src="img/1.png" alt="testi img">
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div id="myCarousel" class="carousel slide" data-bs-interval="5000" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item testi-item active" data-color="#fb9c9a" data-img="img/1.png">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nobis ratione, harum doloremque aspernatur aliquid quaerat dolores voluptates recusandae qui repellat illum, amet ipsa debitis fugiat commodi nemo suscipit ad!</p>
+              <h6 class="font-weight-bold">David Allison - <span>Doctor</span></h6>
+            </div>
+            <div class="carousel-item testi-item" data-color="#fbd39a" data-img="img/2.png">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nobis ratione, harum doloremque aspernatur aliquid quaerat dolores voluptates recusandae qui repellat illum, amet ipsa debitis fugiat commodi nemo suscipit ad!</p>
+              <h6 class="font-weight-bold">Jon can - <span>Volunteer</span></h6>
+            </div>
+            <div class="carousel-item testi-item" data-color="#9ab0fb" data-img="img/3.png">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nobis ratione, harum doloremque aspernatur aliquid quaerat dolores voluptates recusandae qui repellat illum, amet ipsa debitis fugiat commodi nemo suscipit ad!</p>
+              <h6 class="font-weight-bold">Kevin Gajjar - <span>Volunteer</span></h6>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- Send Us A Message -->
 
@@ -214,15 +267,14 @@
   </form>
 </div>
 
-
   <!-- Newsletter --> 
 
-<div class="row justify-content-center bg-green align-items-center">
-      <div class="col-md-6 px-5 text-center">      
-          <span class="d-block mt-3"><h3 class="text-white">Stay Informed!!  <br> Sign Up for news letter </h3></span> 
-          <div class="input-group mb-4 mt-4"> <input type="text" class="form-control" placeholder="Enter email" aria-label="Recipient's username" aria-describedby="button-addon2"> <button class="btn btn-success border-rad" type="button" id="button-addon2">Subscribe</button> </div>
-        </div>
-      </div>
+  <div class="row justify-content-center bg-green align-items-center">
+    <div class="col-md-6 px-5 text-center">      
+      <span class="d-block mt-3"><h3 class="text-white">Stay Informed!!  <br> Sign Up for news letter </h3></span> 
+      <div class="input-group mb-4 mt-4"> <input type="text" class="form-control" placeholder="Enter email" aria-label="Recipient's username" aria-describedby="button-addon2"> <button class="btn btn-success border-rad" type="button" id="button-addon2">Subscribe</button> </div>
+    </div>
+  </div>
 
 <!-- Footer --> 
 
