--- a/services.html
+++ b/services.html
@@ -1,1 +1,167 @@
-In Development
+  <!DOCTYPE html>
+  <html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+
+    <script type="text/javascript" src="js/respond.js"></script>
+    <title>PMRI Website</title>
+  </head>
+  <body>
+    <!-- Nav bar -->
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logo" height="70px" width="250px"></a>
+        <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            </li>
+
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" role="button">
+                Services
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="clinical.html">Clinical Service</a></li>
+                <li><a class="dropdown-item" href="bioanalytical.html">Bioanalytical Services</a></li>
+                <li><a class="dropdown-item" href="scientificaffairs.html">Scientific Affairs</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="scientificHub.html" id="navbarDropdown" role="button">Scientific Hub</a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+               <li><a class="dropdown-item" href="researchhub.html">Research Hub</a></li>
+               <li><a class="dropdown-item" href="PMRInews.html">PMRI News</li></a></li>
+             </ul>
+           </li>
+
+           <li class="nav-item">
+            <a class="nav-link active" href="aboutus.html">About Us</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="careers.html">Careers</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="contactus.html">Contact Us</a>
+          </li>
+          <li class="nav-item">
+            <a href="volunteer.html" class="btn btn-success" >Volunteers</a>
+          </li>
+        </ul>
+
+      </div>
+    </div>
+  </nav>
+</div>
+</div>
+
+<!-- Service Banner -->
+
+<div class="page-header-service">
+  <div class="overlay">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1>Services </h1>
+          <p>Science is our foundation and we never compromise on quality.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<h1 class="text-center pt-3 "> Available Services in Pharma Medica</h1>
+
+<!-- services -->
+
+<!-- Clinical Service -->
+
+<div class="container">
+    <!--Grid row-->
+    <div class="row text-center mx-auto">
+      <!--Grid column-->
+      <div class="col-md-4 mb-4">
+        <img class="img-fluid my-5" alt="100x100" src="img/Service/clinicalservice.png" data-holder-rendered="true">
+      </div>
+      <!--Grid column-->
+      <!--Grid column-->
+      <div class="col-md-8 mb-4 my-5">
+      <h2 class="text-start"> Clinical Service</h2>
+      <div class="service pt-3"> 
+        <p>You can always count on PMRI when you need us. Our GCP-compliant custom built clinical unit, with over 115,000 square foot of space, provides sufficient capacity to meet all of your needs, even during the COVID period. Boasting 360 beds in 6 self-contained state-of-the art units Our flexible scheduling process also provides you with dosing dates right within your target range and accommodate delays and last minute requests. This is a key success factor that allows you to minimize the impact of unavoidable delays during the drug development process</p></div>
+        <div class="text-start pt-5"><a href="clinical.html" class="btn btn-success" >Learn More</a> </div>
+      </div>
+    <!--Grid column-->
+    </div>
+    <!--Grid row-->
+  </div>
+</div>
+
+<!-- Bioanalytical Service -->
+
+  <div class="container">
+    <!--Grid row-->
+    <div class="row text-center mx-auto">
+      <!--Grid column-->
+      <div class="col-md-8 mb-4 my-5">
+        <h2 class="text-start"> Bioanalytical Service</h2>
+      <div class="service pt-3"> 
+        <p>At the center of what we do, our proprietary Laboratory Data Management System (LDMS), fully developed and validated in-house, captures data completely electronically from clinical sample processing to final reported results to eliminate human error. Our superior system which is FDA CFR Part 11 compliant operates with precision & sophistication, and it is compliant with the FDA CFR Part 11 with a full audit trail.</p></div>
+        <div class="text-start pt-5"><a href="bioanalytical.html" class="btn btn-success" >Learn More</a> </div>
+      </div>
+      <!--Grid column-->
+      <!--Grid column-->
+      <div class="col-md-4 mb-4">
+        <img class="img-fluid my-5" alt="100x100" src="img/Service/bioanalytical.png" data-holder-rendered="true">
+      </div>
+    <!--Grid column-->
+    </div>
+    <!--Grid row-->
+  </div>
+</div>
+
+<!-- Scientific Affairs -->
+
+<div class="container">
+    <!--Grid row-->
+    <div class="row text-center mx-auto">
+      <!--Grid column-->
+      <div class="col-md-4 mb-4">
+        <img class="img-fluid my-5" alt="100x100" src="img/Service/clinicalservice.png" data-holder-rendered="true">
+      </div>
+      <!--Grid column-->
+      <!--Grid column-->
+      <div class="col-md-8 mb-4 my-5">
+      <h2 class="text-start"> Scientific Affairs</h2>
+      <div class="service pt-3"> 
+        <p>We recognize that science is the foundation upon which successful drug development is built. Our Scientific Affairs team plays a pivotal role in contributing to overseeing the integrity of the study process. With our expansive library of in-house data, our industry expertise and our experience working with global regulatory agencies, we develop study designs and project plans for regulatory markets around the world. We offer comprehensive support services to help navigate from pre-clinical to regulatory submission.</p></div>
+        <div class="text-start pt-5"><a href="scientificaffairs.html" class="btn btn-success" >Learn More</a> </div>
+      </div>
+    <!--Grid column-->
+    </div>
+    <!--Grid row-->
+  </div>
+</div>
+
+
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
+</body>
+</html>
