--- a/contactus.html
+++ b/contactus.html
@@ -1,1 +1,311 @@
-In Development
+<!DOCTYPE html>
+  <html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+
+
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+    <script type="text/javascript" src="js/respond.js"></script>
+    <title>PMRI Website</title>
+  </head>
+  <body>
+    <!-- Nav bar -->
+    <nav class="navbar navbar-expand-lg bg-light fixed-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logo" height="70px" width="250px"></a>
+          <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              </li>
+
+              <li class="nav-item dropdown">
+                 <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" > 
+                <!-- <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> -->
+                  Services 
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="clinical.html">Clinical Service</a></li>
+                  <li><a class="dropdown-item" href="bioanalytical.html">bioanalytical Services</a></li>
+                  <li><a class="dropdown-item" href="scientificaffairs.html">Scientific Affairs</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="scientificHub.html" id="navbarDropdown">Scientific Hub</a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                 <li><a class="dropdown-item" href="researchhub.html">Research Hub</a></li>
+                 <li><a class="dropdown-item" href="PMRInews.html">PMRI News</li></a></li>
+               </ul>
+             </li>
+
+             <li class="nav-item">
+              <a class="nav-link" href="aboutus.html">About Us</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="careers.html">Careers</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="contactus.html">Contact Us</a>
+            </li>
+            <li class="nav-item">
+              <a href="volunteer.html" class="btn btn-success" >Volunteers</a>
+            </li>
+          </ul>
+
+        </div>
+      </div>
+    </nav>
+  </div>
+</div>
+
+
+<!-- Banner -->
+
+<div class="page-header-contactus">
+  <div class="overlay">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 pt-5">
+          <h1>For More Information Contact Us </h1>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Cards --> 
+
+<div class="container d-flex align-items-center justify-content-center flex-wrap p-5">
+    <div class="box">
+        <div class="body">
+            <div class="imgContainer"> <img src="img/ContactUs/headoffice.png" alt=""> </div>
+            <div class="content d-flex flex-column align-items-center justify-content-center">
+                <div class="text-center" >
+                    <h3 class="text-white fs-5 ">Head Office & Lab</h3>
+                    <p class="fs-6 text-white"> 6100 Belgrave Road, <br>Mississauga, Ontario <br> L5R 0B7 </p>
+                    <p class="fs-6 text-white"><i class="fa fa-phone"></i><a href="#"> +1 (905) 624-9115 </a></p>
+                    <p class="fs-6 text-white"><i class="fa fa-fax"></i><a href="#">  +1 (905) 624-4433 </a></p>
+                   <a class="btn btn-contact" href="#">solutions@pharmamedica.com </a>
+                    <!-- <button class="btn btn-light"> Solutions@pharmamedica.com</button> -->
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="box">
+        <div class="body">
+            <div class="imgContainer"> <img src="img/ContactUs/screeningclinic.png" alt=""> </div>
+            <div class="content d-flex flex-column align-items-center justify-content-center">
+                <div class="text-center">
+                    <h3 class="text-white fs-5">Screening Clinic </h3>
+                    <p class="fs-6 text-white"> 4770 Sheppard Avenue E, <br>Toronto, Ontario <br> M1S 3V6 </p>
+                    <p class="fs-6 text-white"><i class="fa fa-phone"></i><a href="#"> +1 (416) 759-5554 </a></p>
+                    <p class="fs-6 text-white"><i class="fa fa-fax"></i><a href="#">  +1 (416) 291-2010 </a></p>
+                    <a class="btn btn-contact" href="#">volunteers@pharmamedica.com </a>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="box">
+        <div class="body">
+            <div class="imgContainer"> <img src="img/ContactUs/phase1clinic.png" alt=""> </div>
+            <div class="content d-flex flex-column align-items-center justify-content-center">
+                <div>
+                    <h3 class="text-white fs-5">Phase | Clinic</h3>
+                    <p class="fs-6 text-white"> 4770 Sheppard Avenue E, <br>Toronto, Ontario <br> M1S 3V6 </p>
+                    <p class="fs-6 text-white"><i class="fa fa-phone"></i><a href="#"> +1 (416) 759-4111 </a></p>
+                    <p class="fs-6 text-white"><i class="fa fa-fax"></i><a href="#"> +1 (416) 759-2869 </a></p>
+                    <a class="btn btn-contact" href="#">volunteers@pharmamedica.com </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Ask a Questions -->
+
+<h1 class="text-center pt-5"> Send Us A Message </h1> 
+<!-- Wrapper container -->
+<div class="container py-4">
+<form id="contactForm" data-sb-form-api-token="API_TOKEN">
+  <!-- Bootstrap 5 starter form -->
+  <form id="contactForm">
+
+    <!-- First Name input -->
+    <div class="mb-3">
+      <label class="form-label" for="name">First Name</label>
+      <input class="form-control" id="name" type="text" placeholder="Name" data-sb-validations="required" />
+      <div class="invalid-feedback" data-sb-feedback="name:required">First Name is required.</div>
+    </div>
+
+    <div class="mb-3">
+      <label class="form-label" for="name">Last Name</label>
+      <input class="form-control" id="name" type="text" placeholder="Name" data-sb-validations="required"/>
+      <div class="invalid-feedback" data-sb-feedback="name:required">Last Name is required.</div>
+    </div>
+    <!-- Email address input -->
+    <div class="mb-3">
+      <label class="form-label" for="emailAddress">Email Address</label>
+      <input class="form-control" id="emailAddress" type="email" placeholder="Email Address" data-sb-validations="required, email"/>
+      <div class="invalid-feedback" data-sb-feedback="emailAddress:required">Email Address is required.</div>
+      <div class="invalid-feedback" data-sb-feedback="emailAddress:email">Email Address Email is not valid.</div>
+    </div>
+
+    <!-- Message input -->
+    <div class="mb-3">
+      <label class="form-label" for="message">Message</label>
+      <textarea class="form-control" id="message" type="text" placeholder="Message" style="height: 10rem;" data-sb-validations="required"></textarea>
+      <div class="invalid-feedback" data-sb-feedback="message:required">Message is required.</div>
+    </div>
+
+    <!-- Form submissions success message -->
+    <div class="d-none" id="submitSuccessMessage">
+      <div class="text-center mb-3">Form submission successful!</div>
+    </div>
+
+    <div class="d-none" id="submitErrorMessage">
+      <div class="text-center text-danger mb-3">Error sending message!</div>
+    </div>
+
+     <div class="mb-3 form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">I would like to get a latest update</label>
+  </div>
+
+    <!-- Form submit button -->
+    <div class="text-center">
+      <button class="btn btn-success btn-lg border-square" type="submit">Send Message</button>
+   </div>
+  </form>
+</div>
+
+<!-- Newsletter --> 
+
+<div class="row justify-content-center bg-green align-items-center">
+      <div class="col-md-6 px-5 text-center">      
+          <span class="d-block mt-3"><h3 class="text-white">Stay Informed!!  <br> Sign Up for news letter </h3></span> 
+          <div class="input-group mb-4 mt-4"> <input type="text" class="form-control" placeholder="Enter email" aria-label="Recipient's username" aria-describedby="button-addon2"> <button class="btn btn-success border-rad" type="button" id="button-addon2">Subscribe</button> </div>
+        </div>
+      </div>
+
+<!-- Footer --> 
+
+<footer
+class="text-center text-lg-start text-green">
+
+<!-- Section: Links -->
+<section class="">
+  <!--Grid row-->
+  <div class="row">
+    <!-- Grid column -->
+    <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+      <img src="img/logo.png">
+    </div>
+
+    <!-- Grid column -->
+    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+      <h6 class="text-uppercase mb-4 font-weight-bold">Services</h6>
+      <p>
+        <a class="text-black"href="#">Clinical Services</a>
+      </p>
+      <p>
+        <a class="text-black" href="#">Bioanalytical Services</a>
+      </p>
+      <p>
+        <a class="text-black" href="#">Scientific Affairs</a>
+      </p>
+    </div>
+
+    <!-- Grid column -->
+    <hr class="w-100 clearfix d-md-none" /> 
+
+    <!-- Grid column -->
+    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+      <h6 class="text-uppercase mb-4 font-weight-bold">Home</h6>
+      <p>
+        <a class="text-black" href="#"> About Pharma Medica </a></p>
+        <p>
+          <a class="text-black" href="#"> Terms & Condition</a></p>
+          <p>
+            <a class="text-black" href="#"> Contact Us</a></p>
+          </div>
+          <!-- Grid column -->
+          <hr class="w-100 clearfix d-md-none" /> 
+
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold">Head Office</h6>
+            <p>1600 Belgrave Rd</p>
+            <p>Mississauga, ON</p>
+            <p>L5R 0B7</p>
+          </div>
+
+          <!-- Grid column -->
+          <hr class="w-100 clearfix d-md-none" /> 
+
+          <!-- Grid column -->
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold">Follow us Online</h6>
+
+            <!-- Facebook -->
+            <a
+            class="btn btn-primary btn-floating m-1"
+            style="background-color: #3b5998"
+            href="#!"
+            role="button"><i class="fa fa-facebook-f"></i></a>
+
+            <!-- Twitter -->
+            <a
+            class="btn btn-primary btn-floating m-1"
+            style="background-color: #55acee"
+            href="#!"
+            role="button"><i class="fa fa-twitter"></i></a>
+
+            <!-- Instagram -->
+            <a
+            class="btn btn-primary btn-floating m-1"
+            style="background-color: #ac2bac"
+            href="#!"
+            role="button"
+            ><i class="fa fa-instagram"></i></a>
+
+            <!-- Linkedin -->
+            <a
+            class="btn btn-primary btn-floating m-1"
+            style="background-color: #0082ca"
+            href="#!"
+            role="button"><i class="fa fa-linkedin-in"></i></a>
+            
+          </div>
+        </div>
+        <!--Grid row-->
+      </section>
+      <!-- Section: Links -->
+      <!-- Copyright -->
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">© 2021,<a class="text-black" href="#">Pharma Medica Research Inc.</a> All rights reserved.
+    </div>
+    <!-- Copyright -->
+  </footer>
+
+
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
+</body>
+</html>
+
