--- a/readmore.html
+++ b/readmore.html
@@ -24,7 +24,7 @@
   <p>
     <div class="FAQ"> 
       <a data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample" style="text-decoration: none; color: #000000; ">
-        Q. What is a Clinical Trial?
+        <b> Q. What is a Clinical Trial? </b>
       </a>
 
       <div class="collapse" id="collapseExample">
@@ -35,7 +35,7 @@
       <br>
 
     <a data-bs-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample" style="text-decoration: none; color: #000000; ">
-      Q. Who can participate in clinical trials?
+      <b> Q. Who can participate in clinical trials? </b>
     </a>
 
       <div class="collapse" id="collapseExample1">
@@ -46,7 +46,7 @@
       <br>
 
     <a data-bs-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample" style="text-decoration: none; color: #000000; ">
-      Q. What are the benefits and risks of participating in a clinical trial?
+      <b> Q. What are the benefits and risks of participating in a clinical trial? </b>
     </a>
 
     <div class="collapse" id="collapseExample2">
@@ -58,7 +58,7 @@
       <br>
 
       <a data-bs-toggle="collapse" href="#collapseExample4" role="button" aria-expanded="false" aria-controls="collapseExample" style="text-decoration: none; color: #000000; ">
-      Q. What are side effects and adverse reactions?
+      <b> Q. What are side effects and adverse reactions? </b>
     </a>
 
     <div class="collapse" id="collapseExample4">
@@ -69,7 +69,7 @@
       <br>
 
 <a data-bs-toggle="collapse" href="#collapseExample5" role="button" aria-expanded="false" aria-controls="collapseExample" style="text-decoration: none; color: #000000; ">
-     Q. How is the safety of the participant protected?
+     <b> Q. How is the safety of the participant protected? </b>
     </a>
 
     <div class="collapse" id="collapseExample5">
@@ -80,7 +80,7 @@
       <br>
 
 <a data-bs-toggle="collapse" href="#collapseExample6" role="button" aria-expanded="false" aria-controls="collapseExample" style="text-decoration: none; color: #000000; ">
-    Q.What should participant consider before participating in a clinical trial?     
+    <b> Q.What should participant consider before participating in a clinical trial?  </b>    
   </a>
 
     <div class="collapse" id="collapseExample6">
@@ -100,7 +100,7 @@ Who will oversee my care?
       <br>
 
  <a data-bs-toggle="collapse" href="#collapseExample7" role="button" aria-expanded="false" aria-controls="collapseExample" style="text-decoration: none; color: #000000; ">
-    Q.What my experience with PMRI will be?      
+    <b> Q.What my experience with PMRI will be?  </b>    
   </a>
 
     <div class="collapse" id="collapseExample7">
@@ -117,7 +117,7 @@ You will be invited to our clinic located at 4770 Sheppard Ave. East for Medical
       <br>
 
 <a data-bs-toggle="collapse" href="#collapseExample8" role="button" aria-expanded="false" aria-controls="collapseExample" style="text-decoration: none; color: #000000; ">
-   Q. Can I bring my child or pet to my appointment?      
+   <b> Q. Can I bring my child or pet to my appointment?  </b>     
   </a>
     <div class="collapse" id="collapseExample8">
         <div class="card card-body">
@@ -126,7 +126,7 @@ You will be invited to our clinic located at 4770 Sheppard Ave. East for Medical
       </div>
       <br>
   <a data-bs-toggle="collapse" href="#collapseExample9" role="button" aria-expanded="false" aria-controls="collapseExample" style="text-decoration: none; color: #000000; ">
-       Q. What if I don't show up for my appointment?      
+      <b> Q. What if I don't show up for my appointment? </b>     
   </a>
 
     <div class="collapse" id="collapseExample9">
@@ -143,7 +143,7 @@ Most studies involve between 2 and 4 overnight stays in the clinic. Please refer
 </p>
 
 <a data-bs-toggle="collapse" href="#collapseExample10" role="button" aria-expanded="false" aria-controls="collapseExample" style="text-decoration: none; color: #000000; ">
-       Q. Are these studies safe?    
+      <b> Q. Are these studies safe?  </b>  
   </a>
 
     <div class="collapse" id="collapseExample10">
@@ -154,7 +154,7 @@ Most studies involve between 2 and 4 overnight stays in the clinic. Please refer
       <br>
 
 <a data-bs-toggle="collapse" href="#collapseExample11" role="button" aria-expanded="false" aria-controls="collapseExample" style="text-decoration: none; color: #000000; ">
-          Q. Do I have to stay overnight?  
+         <b> Q. Do I have to stay overnight? </b> 
   </a>
 
     <div class="collapse" id="collapseExample11">
@@ -165,7 +165,7 @@ Most studies involve between 2 and 4 overnight stays in the clinic. Please refer
       <br>
 
   <a data-bs-toggle="collapse" href="#collapseExample12" role="button" aria-expanded="false" aria-controls="collapseExample" style="text-decoration: none; color: #000000; ">
-              Q. Where will I sleep?
+             <b> Q. Where will I sleep? </b>
   </a>
 
     <div class="collapse" id="collapseExample12">
@@ -177,7 +177,7 @@ Most studies involve between 2 and 4 overnight stays in the clinic. Please refer
       <br>
 
   <a data-bs-toggle="collapse" href="#collapseExample13" role="button" aria-expanded="false" aria-controls="collapseExample" style="text-decoration: none; color: #000000; ">
-              Q. Will there be a place for showering?
+            <b>  Q. Will there be a place for showering? </b>
   </a>
 
     <div class="collapse" id="collapseExample13">
@@ -189,7 +189,7 @@ Most studies involve between 2 and 4 overnight stays in the clinic. Please refer
       <br>
 
   <a data-bs-toggle="collapse" href="#collapseExample14" role="button" aria-expanded="false" aria-controls="collapseExample" style="text-decoration: none; color: #000000; ">
-                 Q. Are meals provided?
+           <b>      Q. Are meals provided? </b>
   </a>
 
     <div class="collapse" id="collapseExample14">
@@ -201,7 +201,7 @@ Most studies involve between 2 and 4 overnight stays in the clinic. Please refer
       <br>
 
  <a data-bs-toggle="collapse" href="#collapseExample15" role="button" aria-expanded="false" aria-controls="collapseExample" style="text-decoration: none; color: #000000; ">
-                 Q.What will I do while staying at the clinic?
+              <b>   Q.What will I do while staying at the clinic? </b>
   </a>
 
     <div class="collapse" id="collapseExample15">
@@ -213,7 +213,7 @@ Most studies involve between 2 and 4 overnight stays in the clinic. Please refer
       <br>
 
   <a data-bs-toggle="collapse" href="#collapseExample16" role="button" aria-expanded="false" aria-controls="collapseExample" style="text-decoration: none; color: #000000; ">
-                 Q. Will there be side effects from the drug?
+              <b>   Q. Will there be side effects from the drug? </b>
   </a>
 
     <div class="collapse" id="collapseExample16">
@@ -226,7 +226,7 @@ Most studies involve between 2 and 4 overnight stays in the clinic. Please refer
 
 
 <a data-bs-toggle="collapse" href="#collapseExample17" role="button" aria-expanded="false" aria-controls="collapseExample" style="text-decoration: none; color: #000000; ">
-  Q. How much blood will be taken?  </a>
+  <b> Q. How much blood will be taken? </b> </a>
 
     <div class="collapse" id="collapseExample17">
         <div class="card card-body">
@@ -240,7 +240,7 @@ While on study, we take a small amount of blood (about 6 mL) at specific samplin
       <br>
 
 <a data-bs-toggle="collapse" href="#collapseExample18" role="button" aria-expanded="false" aria-controls="collapseExample" style="text-decoration: none; color: #000000; ">
-    Q.  How often can I participate?  
+    <b> Q.  How often can I participate?  </b>
   </a>
 
     <div class="collapse" id="collapseExample18">
@@ -253,7 +253,7 @@ While on study, we take a small amount of blood (about 6 mL) at specific samplin
       <br>
 
 <a data-bs-toggle="collapse" href="#collapseExample19" role="button" aria-expanded="false" aria-controls="collapseExample" style="text-decoration: none; color: #000000; ">
-     Q. What is the difference between a wash-out and a lock-out period? 
+     <b> Q. What is the difference between a wash-out and a lock-out period? </b>
   </a>
 
     <div class="collapse" id="collapseExample19">
@@ -266,7 +266,7 @@ While on study, we take a small amount of blood (about 6 mL) at specific samplin
       <br>
 
 <a data-bs-toggle="collapse" href="#collapseExample20" role="button" aria-expanded="false" aria-controls="collapseExample" style="text-decoration: none; color: #000000; ">
-     Q. What is the difference between a wash-out and a lock-out period? 
+     <b> Q. What is the difference between a wash-out and a lock-out period? </b>
   </a>
 
     <div class="collapse" id="collapseExample20">
@@ -280,7 +280,7 @@ While on study, we take a small amount of blood (about 6 mL) at specific samplin
 
 
 <a data-bs-toggle="collapse" href="#collapseExample20" role="button" aria-expanded="false" aria-controls="collapseExample" style="text-decoration: none; color: #000000; ">
-   Q. What happens if I have side effects from the drug?  
+  <b> Q. What happens if I have side effects from the drug? </b> 
  </a>
 
     <div class="collapse" id="collapseExample20">
@@ -295,7 +295,7 @@ While on study, we take a small amount of blood (about 6 mL) at specific samplin
 
 
 <a data-bs-toggle="collapse" href="#collapseExample21" role="button" aria-expanded="false" aria-controls="collapseExample" style="text-decoration: none; color: #000000; ">
-     Q. What if I can't finish the study? 
+    <b> Q. What if I can't finish the study? </b>
  </a>
 
     <div class="collapse" id="collapseExample21">
@@ -306,7 +306,7 @@ While on study, we take a small amount of blood (about 6 mL) at specific samplin
       <br>
 
   <a data-bs-toggle="collapse" href="#collapseExample22" role="button" aria-expanded="false" aria-controls="collapseExample" style="text-decoration: none; color: #000000; ">
-      Q. Does PMRI deduct taxes?
+     <b> Q. Does PMRI deduct taxes? </b>
  </a>
 
     <div class="collapse" id="collapseExample22">
